# trade-with-me-backend

./: .gitignore  Cargo.toml  README.md  config.yaml  migration_up.sh
docker/: postgres.Dockerfile
migrations/2024-12-02-111317_create_metadata_table/: down.sql  up.sql
migrations/2024-12-03-105611_create_trade_table/: down.sql  up.sql
scripts/: create_trade_rest_call.sh  migration_up.sh
src/: chain_context.rs  config.rs  db.rs  main.rs  metadata_cache.rs  metadata_repository.rs  routes.rs  schema.rs  token_amount_cache.rs  token_service.rs  tokens_fetcher.rs  trade_repository.rs  trade_service.rs  trade_session.rs  trade_websocket.rs  transaction_service.rs
