[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
base64 = "0.22.1"
image = "0.25.5"
mpl-token-metadata = "5.1.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
reqwest = "0.12.9"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
solana-account-decoder = "2.1.2"
solana-client = "2.1.2"
solana-sdk = "2.1.2"
tokio = { version = "1.41.1", features = ["full"] }
