[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.5", features = ["postgres", "r2d2", "serde_json", "uuid"] }
env_logger = "0.11.5"
figment = { version = "0.10.19", features = ["yaml"] }
futures = "0.3.31"
image = "0.25.5"
log = "0.4.22"
mpl-token-metadata = "5.1.0"
r2d2 = "0.8.10"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
solana-account-decoder = "2.1.2"
solana-client = "2.1.2"
solana-sdk = "2.1.2"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tokio-tungstenite = "0.26.1"
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
